--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
             <option value="female">Female</option>
             <option value="third gender">Third Gender</option>
         </select>
+        <p>my personal page</p>
         
 
 
