--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Personal information</h1>
+    <h1 claas="personal">Personal information</h1>
     <p>hello</p>
-    <article>
+    <article class="info">
         Name:Radhika Acharya<br>
         Address: Copenhagen Denmark<br>
         Sex: Female<br>
         Marital Status: Married
     </article>
-    <img src="" alt=""/>
+    <img src="" class="image" alt=""/>
     <caption>a picture</caption>
     <hr>
     <a href="www.google.com">GOOGLE</a><BR>
@@ -40,7 +40,7 @@
         </tr>
     </table>
     <emp>Hobbies</emp>
-    <ol>
+    <ol class="hobbies">
         <li>Dancing</li>
         <li>Travelling</li>
         <li>gossips</li>
@@ -53,7 +53,7 @@
         <li>Norway</li>
     </ul>
     <h2>to know more Personal Information fill up the form and submit</h2>
-    <form>
+    <form class="myform">
         <label>Name</label>
         <input type="text" placeholder="enter your name"><br>
         <label>Email</label>
@@ -66,8 +66,10 @@
             <option value="female">Female</option>
             <option value="third gender">Third Gender</option>
         </select>
-        <p>my personal page</p>
-        
+        <div class="button">
+      <div id="buton">  <button type="btn">SUBMIT</button></div>
+      <div id="butoon">  <button type="btn">CANCEL</button></div>
+    </div>
 
 
 
