--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-</head>
+    <link rel="stylesheet" type="text/css" href="index.css">
 <body>
-    <h1 claas="personal">Personal information</h1>
+    <h1 class="personal">Personal information</h1>
     <p>hello</p>
     <article class="info">
         Name:Radhika Acharya<br>
@@ -15,7 +15,7 @@
         Sex: Female<br>
         Marital Status: Married
     </article>
-    <img src="" class="image" alt=""/>
+    <img src="images/Screenshot (1).png" class="image" alt="only screenshot image"/>
     <caption>a picture</caption>
     <hr>
     <a href="www.google.com">GOOGLE</a><BR>
